src/styles/index.css
/* src/styles/index.css */
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";
@import url("https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@100&family=IBM+Plex+Mono:wght@100;400;600;700&family=Manrope:wght@200..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");

*::after,
*::before,
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
}

body {
  color: rgb(228, 228, 230);
}

/*desktop nav styling*/
.header-nav {
  clip-path: none;
  margin: auto;
  height: auto;
  position: initial;
  border-top: 2px solid rgb(28, 28, 33);
  border-left: 2px solid rgb(28, 28, 33);
  border-right: 2px solid rgb(28, 28, 33);
  border-radius: 1em 1em 0 0;
  overflow: hidden;
}

.hero {
  background-image: url(/src/assets/about/Clip\ path\ group.png);
  background-repeat: no-repeat;
  background-position: top;
  background-size: 18%;
}

.servicesAnimation {
  animation: animateHorizontal 30s linear infinite;
}

.testimonialCard {
  background-image: url(../assets/testimonial-bg.png);
  background-size: cover;
  background-repeat: no-repeat;
}

.footerSerivce {
  color: rgb(93, 95, 103);
  font-weight: 500;
  display: flex;
  flex-wrap: wrap;
  font-size: 0.8rem;
}

.footerListContainer {
  display: flex;
  flex-direction: column;
}

.footerList {
  font-size: 0.8rem;
  padding: 0.5em 0;
  position: relative;
  text-decoration: rgb(93, 95, 103) underline;
  text-decoration-thickness: 0.5;
}

/* .footerList::after{
  content: "";
  display: block;
  position: absolute;
  left: 0;
  width: 100%;
  height: 2px;
  background-color: rgb(93,95,103);
  
} */

@media screen and (max-width: 768px) {
  .hero {
    background-image: none;
  }
}

/*about styling*/

.timeline-box {
  background-image: url(/src/assets/testimonial-bg.png);
  background-size: cover;
  background-repeat: no-repeat;
}

.serviceText {
  left: 20em;
}

.serviceParagraph {
  width: 100% !important;
}

.star {
  display: none;
}

.contactText {
  top: 14em !important ;
  width: 90%;
  left: 1em;
}

.socials {
  display: flex !important;
}

@media screen and (min-width: 640px) and (max-width: 1014px) {
  .serviceText {
    left: 14em;
  }
  .contactText {
    top: 7em !important;
  }
  .header {
    font-size: 0.8rem !important;
  }
  .title {
    font-size: 1rem !important;
    line-height: 0.7em !important;
  }
  .navtext {
    font-size: 0.8rem !important;
    width: 60% !important;
    transform: translateX(6em) !important;
  }
}

@media screen and (min-width: 1114px) and (max-width: 1200px) {
  .socials {
    top: 8.5em !important;
    width: 15% !important;
    padding: 0.5em !important;
  }
}

@media screen and (min-width: 1114px) {
  .contactText {
    top: 11em !important;
  }
  .header {
    font-size: 1rem !important;
  }
  .title {
    font-size: 1.2rem !important;
    line-height: 1.5em !important;
  }
  .navtext {
    font-size: 0.8rem !important;
    width: 60% !important;
    transform: translateX(6em) !important;
  }
}

@media screen and (min-width: 1440px) {
  .contactText {
    top: 13em !important;
  }
  .title {
    font-size: 2em !important;
  }
}

/*mobile nav styles*/
@media screen and (max-width: 1024px) {
  .header-nav {
    clip-path: circle(0% at 90% 10%);
    background-color: rgb(228, 228, 230);
    position: fixed;
    bottom: 0;
    top: 0;
    left: 0;
    width: 100vw;
    z-index: 99;
    transition: clip-path 1s ease-in-out;
    border-radius: 0;
    overflow: hidden;
  }

  .responsive_nav {
    clip-path: circle(75%);
  }
}

